# desktopappcustomagent

./: README.md  setup.sh  tailwind.config.js
desktop-agent/: index.html  package-lock.json  package.json  test-security.js  vite.config.ts
desktop-agent/src/: App.tsx  index.css
desktop-agent/src-tauri/: Cargo.toml  tauri.conf.json
desktop-agent/src-tauri/src/: main.rs
desktop-agent/src-tauri/src/commands/: mod.rs  security.rs
desktop-agent/src-tauri/src/database/: mod.rs  schema.sql
desktop-agent/src-tauri/src/error/: mod.rs
desktop-agent/src-tauri/src/keyring/: mod.rs
desktop-agent/src-tauri/src/logging/: mod.rs
desktop-agent/src-tauri/src/security/: encryption.rs  keyring.rs  master_key.rs  mod.rs
desktop-agent/src-tauri/src/utils/: logging.rs  mod.rs
desktop-agent/src/components/: AppInitializer.tsx
tests/integration/: security_test.rs
